src/BadScript.Tests/tests/failing/invalid-syntax/unknownOperator.bs
a = 123 !* 123 //!* is an unknown operator